# hugoDocs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXAMPLE.md  GUI_IMPLEMENTATION_REPORT.md  LICENSE  MEDIA_SUPPORT_REPORT.md  Makefile  PROJECT.md  README.md  SUMMARY.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: hugo.toml
layouts/shortcodes/: gltf-viewer.html  image.html  pdf-viewer.html
scripts/: demo.sh  demo_gui.sh  demo_media.sh  setup_hugo.sh  start_hugo_server.sh
src/obsidian_to_hugo/: __init__.py  __main__.py  cli.py  main.py  ui_gui.py
src/obsidian_to_hugo/converters/: __init__.py  hugo_converter.py
src/obsidian_to_hugo/core/: __init__.py  models.py
src/obsidian_to_hugo/ui/: __init__.py  main_window.py
src/obsidian_to_hugo/utils/: __init__.py  obsidian_parser.py
src/obsidian_to_hugo/watchers/: __init__.py  file_watcher.py
tests/unit/: test_hugo_converter.py  test_media_support.py  test_obsidian_parser.py  test_ui.py
